framec_tests/language_specific/cpp/v3_outline/negative/state_missing_brace.frm
@target cpp

system S {
    machine:
        $A 
}

